@@ -505,6 +505,46 @@ argument_list|,
 literal|"//*[@numFound='1']"
 argument_list|)
 expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"extractedContent:distinctwords"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='0']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"extractedContent:distinct"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"extractedContent:words"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='2']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"extractedContent:\"distinct words\""
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
 name|loadLocal
 argument_list|(
 literal|"extraction/simple.html"
