@@ -106,6 +106,11 @@ Bug Fixes
 * SOLR-5107: Fixed NPE when using numTerms=0 in LukeRequestHandler
   (Ahmet Arslan, hossman)
 
+* SOLR-4679, SOLR-4908, SOLR-5124: Text extracted from HTML or PDF files
+  using Solr Cell was missing ignorable whitespace, which is inserted by
+  TIKA for convenience to support plain text extraction without using the
+  HTML elements. This bug resulted in glued words.  (hossman, Uwe Schindler)
+
 Optimizations
 ----------------------
 
